# qt-gstreamer-player

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp
gst/: pipeline.cpp  pipeline.hpp
playerWidget/: playerWidget.cpp  playerWidget.hpp
stream/: stream.cpp  stream.hpp
widgets/: window.cpp  window.hpp
